<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Spinner
        android:id="@+id/mood_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_spinner"
        android:entries="@array/mood_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/social_situation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_spinner"
        android:entries="@array/social_options"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mood_spinner" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="0dp"
        android:background="@drawable/border_spinner"
        android:layout_height="wrap_content"
        android:text="Select Date"
        android:gravity="center"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/social_situation" />

    <TextView
        android:id="@+id/text_time"
        android:background="@drawable/border_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Select Time"
        android:gravity="center"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_date" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter Reason"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_time" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/privacySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Make post private?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_description"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/locationSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Include my location?"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/privacySwitch" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show how you're feeling?"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationSwitch" />

    <ImageButton
        android:id="@+id/openCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/red_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        android:layout_marginTop="8dp" />

    <ImageView
        android:id="@+id/captured_image"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@drawable/border_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/openCamera"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/red"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/primary_blue"
        app:layout_constraintStart_toEndOf="@id/cancel_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
