...
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/baobooklogo"
        />
    <!-- Username input -->
    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Username"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:background="@color/white"
        android:minHeight="48dp" />

    <!-- Password input -->
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@color/white"
        android:minHeight="48dp" />

    <!-- Log in button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/red"
        android:minHeight="48dp"
        android:text="@string/Login"
...
